--- a/SDLController.uplugin
+++ b/SDLController.uplugin
@@ -26,7 +26,7 @@
     ],
     "PreBuildSteps": {
         "Win64" : [
-            "powershell.exe $(PluginDir)\\Source\\ThirdParty\\SDLThirdPartyBuild.ps1 -PluginDir $(PluginDir) -VSVersion 2017 -Configuration $(TargetConfiguration)"
+            "cmd.exe $(PluginDir)\\Source\\ThirdParty\\SDLThirdPartyBuild.bat -PluginDir $(PluginDir) -VSVersion 2017 -Configuration $(TargetConfiguration)"
         ]
     }
 }
